Upload k8s adapter
